--- a/Projects/Personal/GradleSrcMan/GradleSrcMan/build.gradle
+++ b/Projects/Personal/GradleSrcMan/GradleSrcMan/build.gradle
@@ -4,6 +4,7 @@ ext {
     jarFolderPath = 'C:\\IVI\\Apps\\Scripts\\General\\GradleSrcMan'
 
     subProjectNames = [
+            ':gradle-utils',
             ':xml-utils'
     ]
     compileClassPaths = []
